--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     </head>
     <body>
         <div>
-            <video id="99" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://conf.livestreaming.mw.smart-integration.ricoh.com/movie/dynamic-2K-15-3M.mp4" type="video/mp4"></video>
-            <video id="1" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-4K-5-3M.mp4" type="video/mp4"></video>
-            <video id="2" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-2K-15-3M.mp4" type="video/mp4"></video>
-            <video id="3" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-2K-5-0_3M.mp4" type="video/mp4"></video>
-            <video id="4" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-4K-5-3M.mp4" type="video/mp4"></video>
-            <video id="5" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-2K-15-3M.mp4" type="video/mp4"></video>
-            <video id="6" loop muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-2K-5-0_3M.mp4" type="video/mp4"></video>
+            <video id="99" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://conf.livestreaming.mw.smart-integration.ricoh.com/movie/dynamic-2K-15-3M.mp4" type="video/mp4"></video>
+            <video id="1" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-4K-5-3M.mp4" type="video/mp4"></video>
+            <video id="2" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-2K-15-3M.mp4" type="video/mp4"></video>
+            <video id="3" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/static-2K-5-0_3M.mp4" type="video/mp4"></video>
+            <video id="4" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-4K-5-3M.mp4" type="video/mp4"></video>
+            <video id="5" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-2K-15-3M.mp4" type="video/mp4"></video>
+            <video id="6" muted autoplay playsinline crossOrigin="anonymous" width="50%" height="50%"><source src="https://ls-lp.mwp.ricoh.com/movie/dynamic-2K-5-0_3M.mp4" type="video/mp4"></video>
         </div>
     </body>
 </html>
